# mc_biRobotTeleop

./: .gitignore  CMakeLists.txt  README.md  insert_content.cmake
etc/: BiRobotTask.in.yaml  BiRobotTasks.in.yaml  BiRobotTeleoperation.in.yaml  DampingTasks.in.yaml  ForcesDisplay.in.yaml  ForcesTasks.in.yaml  HalfSitting.in.yaml  HumanMap.in.yaml  HumanTasks.in.yaml  JointsDamping.in.yaml  Observers.in.yaml  RobotLimbMap.in.yaml  RobotTeleopTasks.in.yaml  Stabilizer.in.yaml  mc_humanMap.in.yaml
etc.panda_hrp4/: BiRobotTasks.in.yaml  BiRobotTeleoperation.in.yaml  DampingTasks.in.yaml  ForcesTasks.in.yaml  HumanMap.in.yaml  HumanTasks.in.yaml  JointsDamping.in.yaml  RobotTeleopTasks.in.yaml  mc_humanMap.in.yaml
etc.test/: BiRobotTasks.in.yaml  BiRobotTeleoperation.in.yaml  HumanTasks.in.yaml  JointsDamping.in.yaml  RobotTeleopTasks.in.yaml
src/: BiRobotTeleoperation.cpp  BiRobotTeleoperation.h  CMakeLists.txt  api.h  convexViz.h  lib.cpp  yaml_path.in.h
src/states/: BiRobotTeleoperation_Initial.cpp  BiRobotTeleoperation_Initial.h  BiRobotTeleoperation_Task.cpp  BiRobotTeleoperation_Task.h  CMakeLists.txt  ChooseTransition.cpp  ChooseTransition.h  ForceDisplay.cpp  ForceDisplay.h  ForceTransmission.cpp  ForceTransmission.h  ForceTransmissionLocal.cpp  ForceTransmissionLocal.h  HandDamping.cpp  HandDamping.h  HumanPose.cpp  HumanPose.h  HumanPoseEstimation.cpp  HumanPoseEstimation.h  JointsDamping.cpp  JointsDamping.h  RelativePose.cpp  RelativePose.h
utils/: config.yaml  human_generator.py  imgui.ini  run_sm_interfaces.sh
